# termiccio-terminal

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
termiccio_terminal/: __init__.py  compactor.py  handler.py  manager.py  router.py  schemas.py  session.py  xterm_worker.mjs  xterm_worker.py
tests/: test_terminal.py
