[project]
name = "termiccio-terminal"
version = "0.1.0"
description = "Reusable async PTY terminal session management with WebSocket streaming for FastAPI"
authors = [
    { name = "Matthew D. Scholefield", email = "matthew331199@gmail.com" },
]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "virtual-term>=2.0.2",
    "ptyprocess>=0.7.0",
    "loguru>=0.7.0",
    "uvicorn[standard]>=0.30.0",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
    "Framework :: FastAPI",
]

[project.urls]
Homepage = "https://github.com/MatthewScholefield/termiccio-terminal"
Repository = "https://github.com/MatthewScholefield/termiccio-terminal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["termiccio_terminal"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pre-commit>=3.7.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
